--- a/src/.travis.yml
+++ b/src/.travis.yml
@@ -6,4 +6,4 @@ before_install:
   - docker build -t vivekraj59/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run vivekraj59/docker-react npm run test -- -- coverage
+  - docker run -e CI=true vivekraj59/docker-react npm run test
