added deployed config

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,12 @@ script:
 
   deploy:
     provider: elasticbeanstalk
-    region: "mumbai"
+    region: "ap-south-1"
     app: "docker-react"
-    env: "Docker-env"
-    bucket_name: "S3"
+    env: "DockerReact-env"
+    bucket_name: "elasticbeanstalk-ap-south-1-806866393353"
+    bucket_path:"docker-react"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+    secure: "$AWS_ACCESS_KEY"
